--- a/listings.html
+++ b/listings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Listed Horses</title>
+  <title>Listed Horses - EQUEST</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Horse Marketplace</p>
+    <p>&copy; 2025 EQUEST - All rights reserved.</p>
   </footer>
 
   <script src="app.js"></script>
